fix table alignment inventory

--- a/src/managerView/styles/managerHome.css
+++ b/src/managerView/styles/managerHome.css
@@ -1,4 +1,5 @@
 #managerHomeContainer {
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
